LM_LPeMC_ImplementazioneLinguaggioMiniFun_ANTRL_JAVA/src/lpemc/rc/minifun/MiniFunParser.java
// $ANTLR 3.5.1 /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g 2014-02-13 23:21:30

package lpemc.rc.minifun;

import lpemc.rc.minifun.ast.*;
import java.util.HashMap;
import java.util.ArrayList;
import lpemc.rc.minifun.TypeSystem.TMappings;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class MiniFunParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARROW", "ASS", "BOOLTYPE", "CLOSECOMMENT", 
		"CLPAR", "COL", "COMMA", "CRPAR", "DIV", "ELSE", "EMPTY", "EQ", "ERR", 
		"FALSE", "FIRST", "FUN", "GENERICTYPE", "GEQ", "ID", "IF", "IN", "INTTYPE", 
		"LANGLE", "LEQ", "LET", "LISTTYPE", "LPAR", "LSQRPAR", "LSTCONS", "L_AND", 
		"L_NOT", "L_OR", "MINUS", "MODULO", "NAT", "OPENCOMMENT", "PIPE", "PLUS", 
		"PRINT", "RANGLE", "REST", "RPAR", "RSQRPAR", "SEMIC", "THEN", "TIMES", 
		"TRUE", "VAR", "WHITESPACES"
	};
	public static final int EOF=-1;
	public static final int ARROW=4;
	public static final int ASS=5;
	public static final int BOOLTYPE=6;
	public static final int CLOSECOMMENT=7;
	public static final int CLPAR=8;
	public static final int COL=9;
	public static final int COMMA=10;
	public static final int CRPAR=11;
	public static final int DIV=12;
	public static final int ELSE=13;
	public static final int EMPTY=14;
	public static final int EQ=15;
	public static final int ERR=16;
	public static final int FALSE=17;
	public static final int FIRST=18;
	public static final int FUN=19;
	public static final int GENERICTYPE=20;
	public static final int GEQ=21;
	public static final int ID=22;
	public static final int IF=23;
	public static final int IN=24;
	public static final int INTTYPE=25;
	public static final int LANGLE=26;
	public static final int LEQ=27;
	public static final int LET=28;
	public static final int LISTTYPE=29;
	public static final int LPAR=30;
	public static final int LSQRPAR=31;
	public static final int LSTCONS=32;
	public static final int L_AND=33;
	public static final int L_NOT=34;
	public static final int L_OR=35;
	public static final int MINUS=36;
	public static final int MODULO=37;
	public static final int NAT=38;
	public static final int OPENCOMMENT=39;
	public static final int PIPE=40;
	public static final int PLUS=41;
	public static final int PRINT=42;
	public static final int RANGLE=43;
	public static final int REST=44;
	public static final int RPAR=45;
	public static final int RSQRPAR=46;
	public static final int SEMIC=47;
	public static final int THEN=48;
	public static final int TIMES=49;
	public static final int TRUE=50;
	public static final int VAR=51;
	public static final int WHITESPACES=52;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public MiniFunParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public MiniFunParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return MiniFunParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g"; }


	  /* approach to symbol table: LIST OF TABLES */
	  protected ArrayList<HashMap<String,STEntry>> symbolTable  = new ArrayList<HashMap<String,STEntry>>();
		protected int nesting_level = 0;
		protected int var_offset = 1;
		
		protected java.util.Stack<Integer> varoffsets = new java.util.Stack<Integer>();
		
		protected String currFunction = null;



	// $ANTLR start "prog"
	// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:39:1: prog returns [Node ast] :lb= letBlock ;
	public final Node prog() throws RecognitionException {
		Node ast = null;


		Node lb =null;

		try {
			// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:40:3: (lb= letBlock )
			// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:40:5: lb= letBlock
			{
			 
			    var_offset = 1; 
			    symbolTable.add( new HashMap<String,STEntry>() );  /* adding symbol table for globals */
			    varoffsets.push(new Integer(1));
			    
			pushFollow(FOLLOW_letBlock_in_prog60);
			lb=letBlock();
			state._fsp--;

			 ast = new ProgNode(lb); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return ast;
	}
	// $ANTLR end "prog"



	// $ANTLR start "letBlock"
	// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:47:1: letBlock returns [Node ast] : LET d= declist IN e= exp SEMIC ;
	public final Node letBlock() throws RecognitionException {
		Node ast = null;


		ArrayList<IdentifierDeclNode> d =null;
		Node e =null;

		try {
			// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:48:2: ( LET d= declist IN e= exp SEMIC )
			// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:48:4: LET d= declist IN e= exp SEMIC
			{
			match(input,LET,FOLLOW_LET_in_letBlock76); 
			pushFollow(FOLLOW_declist_in_letBlock83);
			d=declist();
			state._fsp--;

			match(input,IN,FOLLOW_IN_in_letBlock87); 
			pushFollow(FOLLOW_exp_in_letBlock91);
			e=exp();
			state._fsp--;

			match(input,SEMIC,FOLLOW_SEMIC_in_letBlock93); 
			 
					  ast = new LetBlockNode(d, e); 
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return ast;
	}
	// $ANTLR end "letBlock"



	// $ANTLR start "declist"
	// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:55:1: declist returns [ArrayList<IdentifierDeclNode> astList] : ( VAR id= ID COL t= type ASS e= exp SEMIC | FUN id= ID ( LANGLE gentype= GENERICTYPE ( COMMA gentype_n= GENERICTYPE )* RANGLE )? COL t= type LPAR (arg= ID COL argt= type ( COMMA narg= ID COL nargt= type )* )? RPAR CLPAR (e= exp |e= letBlock ) CRPAR SEMIC | comment )* ;
	public final ArrayList<IdentifierDeclNode> declist() throws RecognitionException {
		ArrayList<IdentifierDeclNode> astList = null;


		Token id=null;
		Token gentype=null;
		Token gentype_n=null;
		Token arg=null;
		Token narg=null;
		TypeNode t =null;
		Node e =null;
		TypeNode argt =null;
		TypeNode nargt =null;

		try {
			// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:56:2: ( ( VAR id= ID COL t= type ASS e= exp SEMIC | FUN id= ID ( LANGLE gentype= GENERICTYPE ( COMMA gentype_n= GENERICTYPE )* RANGLE )? COL t= type LPAR (arg= ID COL argt= type ( COMMA narg= ID COL nargt= type )* )? RPAR CLPAR (e= exp |e= letBlock ) CRPAR SEMIC | comment )* )
			// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:56:4: ( VAR id= ID COL t= type ASS e= exp SEMIC | FUN id= ID ( LANGLE gentype= GENERICTYPE ( COMMA gentype_n= GENERICTYPE )* RANGLE )? COL t= type LPAR (arg= ID COL argt= type ( COMMA narg= ID COL nargt= type )* )? RPAR CLPAR (e= exp |e= letBlock ) CRPAR SEMIC | comment )*
			{
			 
				    astList = new ArrayList<IdentifierDeclNode>(); 
				    HashMap<String,STEntry> currTable = symbolTable.get(nesting_level);
				    
				    var_offset = varoffsets.peek();
				    //System.out.println("Var offset at start of this declist is " + var_offset);
				  
			// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:64:3: ( VAR id= ID COL t= type ASS e= exp SEMIC | FUN id= ID ( LANGLE gentype= GENERICTYPE ( COMMA gentype_n= GENERICTYPE )* RANGLE )? COL t= type LPAR (arg= ID COL argt= type ( COMMA narg= ID COL nargt= type )* )? RPAR CLPAR (e= exp |e= letBlock ) CRPAR SEMIC | comment )*
			loop6:
			while (true) {
				int alt6=4;
				switch ( input.LA(1) ) {
				case VAR:
					{
					alt6=1;
					}
					break;
				case FUN:
					{
					alt6=2;
					}
					break;
				case OPENCOMMENT:
					{
					alt6=3;
					}
					break;
				}
				switch (alt6) {
				case 1 :
					// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:64:4: VAR id= ID COL t= type ASS e= exp SEMIC
					{
					match(input,VAR,FOLLOW_VAR_in_declist123); 
					id=(Token)match(input,ID,FOLLOW_ID_in_declist127); 
					match(input,COL,FOLLOW_COL_in_declist129); 
					pushFollow(FOLLOW_type_in_declist133);
					t=type();
					state._fsp--;

					match(input,ASS,FOLLOW_ASS_in_declist135); 
					pushFollow(FOLLOW_exp_in_declist139);
					e=exp();
					state._fsp--;

					match(input,SEMIC,FOLLOW_SEMIC_in_declist141); 
					 
								VarDeclNode vdn = new VarDeclNode((id!=null?id.getText():null), t, e);
								astList.add(vdn);
								
								STEntry entry = new STEntry(vdn, var_offset++);
								entry.setProperty("kind", "var");
								
								if(t instanceof FunTypeNode){
								  // se la variabile è di tipo funzione (i.e. è un riferimento a funzione)
								  // allora incrementiamo l'offset per fare posto alla sua chiusura
								  var_offset++;
								  //System.out.println("Var " + (id!=null?id.getText():null) + " is of a function type");
								  entry.setProperty("kind", "fun");
								}
								
								// update the top of stack's var_offset level
					      varoffsets.pop();
					      varoffsets.push(var_offset);		
								
								STEntry previous = currTable.put((id!=null?id.getText():null), entry);
								if(previous!=null){
								  	// error: identifier already declared
								  	System.out.println("Parsing error: multiple decl for identifier " + (id!=null?id.getText():null) +
								   	 " at line " + (id!=null?id.getLine():0));
								   	System.exit(1);
								}
							
					}
					break;
				case 2 :
					// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:96:3: FUN id= ID ( LANGLE gentype= GENERICTYPE ( COMMA gentype_n= GENERICTYPE )* RANGLE )? COL t= type LPAR (arg= ID COL argt= type ( COMMA narg= ID COL nargt= type )* )? RPAR CLPAR (e= exp |e= letBlock ) CRPAR SEMIC
					{
					 ArrayList<GenericTypeNode> genTypes = new ArrayList<GenericTypeNode>(); 
					match(input,FUN,FOLLOW_FUN_in_declist171); 
					id=(Token)match(input,ID,FOLLOW_ID_in_declist175); 
					// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:98:3: ( LANGLE gentype= GENERICTYPE ( COMMA gentype_n= GENERICTYPE )* RANGLE )?
					int alt2=2;
					int LA2_0 = input.LA(1);
					if ( (LA2_0==LANGLE) ) {
						alt2=1;
					}
					switch (alt2) {
						case 1 :
							// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:98:4: LANGLE gentype= GENERICTYPE ( COMMA gentype_n= GENERICTYPE )* RANGLE
							{
							match(input,LANGLE,FOLLOW_LANGLE_in_declist181); 
							gentype=(Token)match(input,GENERICTYPE,FOLLOW_GENERICTYPE_in_declist185); 
							 genTypes.add(new GenericTypeNode((gentype!=null?gentype.getText():null))); 
							// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:99:5: ( COMMA gentype_n= GENERICTYPE )*
							loop1:
							while (true) {
								int alt1=2;
								int LA1_0 = input.LA(1);
								if ( (LA1_0==COMMA) ) {
									alt1=1;
								}

								switch (alt1) {
								case 1 :
									// /mnt/D/important/School/LM/y1s1_LinguaggiDiProgrammazioneEModelli/lab/eclipseWorkspace/LPeMC_11_22_Assignment/src/MiniFun.g:99:6: COMMA gentype_n= GENERICTYPE
									{
									match(input,COMMA,FOLLOW_COMMA_in_declist195); 
									gentype_n=(Token)match(input,GENERICTYPE,FOLLOW_GENERICTYPE_in_declist199); 
									 genTypes.add(new GenericTypeNode((gentype!=null?gentype.getText():null))); 
									}
									break;

								default :
									break loop1;
								}
							}

							match(input,RANGLE,FOLLOW_RANGLE_in_declist208); 
							}
							break;

					}

					match(input,COL,FOLLOW_COL_in_declist215); 
					pushFollow(FOLLOW_type_in_declist219);
					t=type();
					state._fsp--;
